<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/config" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBackConfig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/round_keyboard_arrow_left_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center|center_vertical"
            android:text="@string/lblConfig"
            android:textColor="@color/violet"
            android:textSize="34sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="32dp"
            android:layout_weight="2"
            android:background="@color/violet" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="68dp"
        android:background="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0729927" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEquipe01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:paddingLeft="10dp"
                android:text="@string/lblEquipe01"
                android:textColor="@color/violet"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txEquipe01"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_rounded_white"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/hint_equipe"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/violet"
                android:textColorHint="@color/hintcolor" />

            <TextView
                android:id="@+id/tvEquipe02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:paddingLeft="10dp"
                android:text="@string/lblEquipe02"
                android:textColor="@color/violet"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txEquipe02"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_rounded_white"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/hint_equipe"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/violet"
                android:textColorHint="@color/hintcolor" />

            <TextView
                android:id="@+id/tvDuracaoQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:paddingLeft="10dp"
                android:text="@string/lblDuracaoQuarto"
                android:textColor="@color/violet"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txDuracaoQ"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_rounded_white"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/hint_duration"
                android:inputType="datetime"
                android:paddingLeft="10dp"
                android:textColor="@color/violet"
                android:textColorHint="@color/hintcolor" />

            <TextView
                android:id="@+id/tvQtdQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:paddingLeft="10dp"
                android:text="@string/lblQtdQ"
                android:textColor="@color/violet"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txQtdQ"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_rounded_white"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/hint_qtdQ"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/violet"
                android:textColorHint="@color/hintcolor" />

            <TextView
                android:id="@+id/tvAddTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:paddingLeft="10dp"
                android:text="@string/lblAddDuracao"
                android:textColor="@color/violet"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txAddTime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_rounded_white"
                android:elevation="4dp"
                android:ems="10"
                android:fontFamily="@font/nunito_sans_semibold"
                android:hint="@string/hint_durationadd"
                android:inputType="datetime"
                android:paddingLeft="10dp"
                android:textColor="@color/violet"
                android:textColorHint="@color/hintcolor" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveConfig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundend_bg"
        android:elevation="6dp"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/ButtonStyleViolet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.278" />


</androidx.constraintlayout.widget.ConstraintLayout>