<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center|center_vertical"
        android:text="@string/titleHome"
        android:textColor="@color/violet"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:background="@color/violet"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:background="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="68dp"
        android:background="@color/violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAboutHome"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/roundend_bg"
        android:elevation="6dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/lblCreditos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/ButtonStyleViolet"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundend_bg"
        android:elevation="6dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/lblNewGame"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/ButtonStyleViolet"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/btnHist"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/roundend_bg"
        android:elevation="6dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/lblHistorico"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/ButtonStyleViolet"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/roundend_bg"
        android:elevation="6dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/lblConfig"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/ButtonStyleViolet"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14841849" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8564477" />

</androidx.constraintlayout.widget.ConstraintLayout>